--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     addPin(29.3503, 105.4417, '小猪');
     addPin(23.3411, 114.1791, '志琦');
     addPin(39.4699, -0.3763, 'nana');
-    addPin(22.5431, 114.0579, 'cx、君虹');
+    addPin(22.5431, 114.0579, 'cx、君虹、嘉怡');
     addPin(22.7783, 115.3653, '彬炫');
     addPin(22.2705, 113.5767, '悦悦');
     addPin(31.2304, 121.4737, '瑾宝'); // 上海
